--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 			<h3 class="hero-action-subtitle">We Bring You Convenience and Comfort</h3>
 			<h4 class="hero-action-title">Get our Breezy Haven app for your Android or iOS!</h4>
 			<p class="hero-action-description">With our hotel mobile app, you can enjoy they convenience and comfort of booking a room, checking in and out, ordering room service, exploring the hotel, and getting local tips.</p>
-			<p><a href="#" class="get-started">Get It Now!</a></p>
+			<p><a href="#" class="get-started" id="getApp">Get It Now!</a></p>
 		</div><!-- /.Container -->
 
   
