--- a/index.html
+++ b/index.html
@@ -357,5 +357,12 @@
     <script type="text/javascript" src="js/jquery.slitslider.js"></script>
 	<script type="text/javascript" src="js/slitslider-custom.js"></script>
     <script src="js/custom-scripts.js"></script>
+	<script>
+		const myBtn = document.getElementById("getApp");
+		const displayAlert = function() {
+			alert("App coming soon!");
+		}
+		myBtn.addEventListener("click", displayAlert, false);
+	</script>
 </body>
 </html>
