--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
 
                             <address>
                               <strong>Breezy Haven Hotel, Inc.</strong><br>
-                              P.O BOX 229-49000 Kwale, Diani<br>
+                              P.O BOX 198-30100 Eldoret, Kenya<br>
                               Kenya<br>
                               breezyhaven@gmail.com <br>
-                              <abbr title="Phone">P:</abbr> (254) 7224-47180
+                              <abbr title="Phone">P:</abbr> (254) 72435-7545
                             </address>
 					</div></div>
                     <div class="col-sm-8 col-md-8">
