--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                         <span class="icon-bar"></span>
                     </button>
                     <h1 id="logo-text">Breezy Haven Hotel <br><p id="slogan">Good Food, Good Life</p></h1>
-                    <!-- <a class="navbar-brand" href="index.html">Breezy Haven<img src="images/logo.png" alt="logo"></a> -->
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
@@ -315,7 +314,7 @@
                               <strong>Breezy Haven Hotel, Inc.</strong><br>
                               P.O BOX 198-30100 Eldoret, Kenya<br>
                               Kenya<br>
-                              breezyhaven@gmail.com <br>
+                              <i class="fa-regular fa-envelope"></i>breezyhaven@gmail.com <br>
                               <abbr title="Phone">P:</abbr> (254) 72435-7545
                             </address>
 					</div></div>
