--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
                             <address>
                               <strong>Breezy Haven Hotel, Inc.</strong><br>
-                              P.O BOX 198-30100 Eldoret, Kenya<br>
+                              P.O BOX 198 - 30100 Eldoret, Kenya<br>
                               Kenya<br>
                               <i class="fa-regular fa-envelope"></i>breezyhaven@gmail.com <br>
                               <abbr title="Phone">P:</abbr> (254) 72435-7545
