--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                               P.O BOX 198 - 30100 Eldoret, Kenya<br>
                               Kenya<br>
                               <i class="fa-regular fa-envelope"></i>breezyhaven@gmail.com <br>
-                              <abbr title="Phone">P:</abbr> (254) 72435-7545
+                              Phone: (254) 72435-7545
                             </address>
 					</div></div>
                     <div class="col-sm-8 col-md-8">
